# ETROC-DAQ2

./: .bumpversion.cfg  .pre-commit-config.yaml  AUTHORS.rst  CHANGELOG.rst  PyPIREADME.md  README.md  README.rst  pyproject.toml  pytest.ini
etroc_daq2/: __init__.py
src/etroc_daq2/: DAQ.py  __init__.py  cli.py  daq.py  fpga.py  fpga_legacy.py  usb_iss.py
tests/: test_DAQ.py
