[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ETROC-DAQ2"
version = "0.0.0"
authors = [
  { name="Cristóvão Beirão da Cruz e Silva", email="cbeiraod@cern.ch" },
]
maintainers = [
]
description = "A new and improved DAQ for standalone ETROC testing"
readme = "PyPIREADME.md"
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 1 - Planning",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: zlib/libpng License",
    "Operating System :: OS Independent",
    "Environment :: Console",
    "Topic :: Scientific/Engineering",
]
keywords = ["ETROC", "DAQ", "Awesome"]

[project.urls]
"Homepage" = "https://github.com/cbeiraod/ETROC-DAQ2"
"Bug Tracker" = "https://github.com/cbeiraod/ETROC-DAQ2/issues"

[project.scripts]
run-etroc-daq2 = "etroc_daq2.cli:main"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]

[tool.black]
line-length = 140
target-version = ["py38", "py39", "py310", "py311"]
skip-string-normalization = true
required-version = 23
extend-exclude = '''
# A regex preceded with ^/ will apply only to files and directories
# in the root of the project.
(
  venv
  dist
  build
  .pytest_cache
  .github
)
'''
