[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ETROC-DAQ2"
version = "0.0.0"
authors = [
  { name="Cristóvão Beirão da Cruz e Silva", email="cbeiraod@cern.ch" },
]
maintainers = [
]
description = "A new and improved DAQ for standalone ETROC testing"
readme = "PyPIREADME.md"
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 1 - Planning",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: zlib/libpng License",
    "Operating System :: OS Independent",
    "Environment :: Console",
    "Topic :: Scientific/Engineering",
]
keywords = ["ETROC", "DAQ", "Awesome"]

[project.urls]
"Homepage" = "https://github.com/cbeiraod/ETROC-DAQ2"
"Bug Tracker" = "https://github.com/cbeiraod/ETROC-DAQ2/issues"

[project.scripts]
run-etroc-daq2 = "etroc_daq2.cli:main"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]

[tool.black]
line-length = 140
target-version = ["py38", "py39", "py310", "py311"]
skip-string-normalization = true
required-version = 24
extend-exclude = '''
# A regex preceded with ^/ will apply only to files and directories
# in the root of the project.
(
  venv
  dist
  build
  .pytest_cache
  .github
)
'''

[tool.flake8]
#ignore = ['E231', 'E241']
# Default: E121,E123,E126,E226,E24,E704,W503,W504
ignore = ['E121', 'E123', 'E126']
exclude = ".git, .github, venv, .mypy_cache, .pytest_cache, build, dist, __pycache__"
per-file-ignores = [
    '__init__.py:F401',
]
max-line-length = 140
max-complexity = 18
count = true

[tool.isort]
profile = "black"
force_single_line = true
line_length = 140
known_first_party = ['etroc_daq2']
default_section = 'THIRDPARTY'
forced_separate = 'test_etroc_daq2'
skip = ".pytest_cache,.git,.github,venv,build,dist"
